Updated routing links

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-charset="UTF-8"
-name="viewport" content="initial-scale=1, user-scalable=no"
-Edit Page
-rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
-rel="stylesheet" href="../../css/style.css"
-src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+<!--charset="UTF-8"-->
+<!--name="viewport" content="initial-scale=1, user-scalable=no"-->
+<!--Edit Page-->
+<!--rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"-->
+<!--rel="stylesheet" href="../../css/style.css"-->
+<!--src="../../vendors/bootstrap/dist/js/bootstrap.min.js"-->
 
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a [routerLink]="['/website-list]" class="navbar-link">
+        <a [routerLink]="['/user/:uid/website']" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -23,14 +23,14 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
         </a>
       </div>
       <p class="navbar-brand pull-right">
-        <a class="navbar-link" [routerLink]="['/page-new]">
+        <a class="navbar-link" [routerLink]="['/user/:uid/website/:wid/page/new']">
           <span class="glyphicon glyphicon-plus"></span>
         </a>
       </p>
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <a [routerLink]="['/page-list]" class="navbar-link">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -43,7 +43,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
       </div>
 
       <p class="navbar-brand pull-right">
-        <a [routerLink]="['/page-list]" class="navbar-link">
+        <a [routerLink]="['/user/:uid/website/:wid/page']" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
@@ -59,12 +59,12 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                <a [routerLink]="['/../widget/widget-list.html]">
+                <a [routerLink]="['user/:uid/website/:wid/page/:pid/widget']">
                   Blog Post
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/page-edit.html]">
+                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -73,12 +73,12 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                <a [routerLink]="['/../widget/widget-list.html]">
+                <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
                   Blogs
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/page-edit.html]">
+                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -87,12 +87,12 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                <a [routerLink]="['/../widget/widget-list.html]">
+                <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
                   Home
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/page-edit.html]">
+                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -101,12 +101,12 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                <a [routerLink]="['/../widget/widget-list.html]">
+                <a [routerLink]="['user/:uid/website/:wid/page/:pid/widget']">
                   About
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/page-edit.html]">
+                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -115,12 +115,12 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
           <li class="list-group-item">
             <div class="row">
               <div class="col-xs-9">
-                <a [routerLink]="['/../widget/widget-list.html]">
+                <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
                   Contact Us
                 </a>
               </div>
               <div class="col-xs-3">
-                <a class="pull-right" [routerLink]="['/page-edit.html]">
+                <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
                   <span class="glyphicon glyphicon-cog"></span>
                 </a>
               </div>
@@ -156,7 +156,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
             class="form-control"/>
         </div>
       </form>
-      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/page-list.html]">
+      <a class="btn btn-danger btn-block" role="button" aria-pressed="true" [routerLink]="['/user/:uid/website/:wid/page']">
         Delete
       </a>
     </div>
@@ -164,7 +164,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
         <p class="navbar-brand pull-right">
-          <a [routerLink]="['/../../views/user/profile.html]">
+          <a [routerLink]="['/user/:uid']">
             <span class="glyphicon glyphicon-user"></span>
           </a>
         </p>
