--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
-charset="UTF-8"
-name="viewport" content="initial-scale=1, user-scalable=no"
-Choose Widget
-rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
-rel="stylesheet" href="../../css/style.css"
-src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+<!--charset="UTF-8"-->
+<!--name="viewport" content="initial-scale=1, user-scalable=no"-->
+<!--Choose Widget-->
+<!--rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"-->
+<!--rel="stylesheet" href="../../css/style.css"-->
+<!--src="../../vendors/bootstrap/dist/js/bootstrap.min.js"-->
 
 <div class="container-fluid jj-body">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand pull-left">
-        <a href="widget-list.html" class="navbar-link">
+        <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -25,22 +25,22 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
     </div>
   </nav>
   <nav class="jj-widget-chooser-padding">
-    <ul><a href="../../views/widget/widget-heading.html"> Header </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Label </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> HTML </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Text Input </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Link </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Button </a></ul>
-    <ul><a href="../../views/widget/widget-image.html"> Image </a></ul>
-    <ul><a href="../../views/widget/widget-youtube.html"> YouTube </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Data Table </a></ul>
-    <ul><a href="../../views/widget/widget-chooser.html"> Repeater </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Header </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Label </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> HTML </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Text Input </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Link </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Button </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Image </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> YouTube </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Data Table </a></ul>
+    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Repeater </a></ul>
 
   </nav>
   <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
       <p class="navbar-brand pull-right">
-        <a href="../../views/user/profile.html">
+        <a [routerLink]="['/user/:uid']">
           <span class="glyphicon glyphicon-user"></span>
         </a>
       </p>
