--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -43,11 +43,8 @@
     <button class="btn btn-primary btn-block"
             type="submit"
             [disabled]="!f.valid">Login</button>
-    <a class="btn btn-success btn-block" role="button" aria-pressed="true" href="register.html">
+    <a class="btn btn-success btn-block" role="button" aria-pressed="true" [routerLink]="['/register']">
       Register
-    </a>
-    <a class="btn btn-danger btn-block" role="button" aria-pressed="true" href="../../index.html">
-      Cancel
     </a>
   </form>
 </div>
