--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
-charset="UTF-8"
-name="viewport" content="initial-scale=1, user-scalable=no"
-Widget List
-rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"
-rel="stylesheet" href="../../css/style.css"/>
-src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
+<!--charset="UTF-8"-->
+<!--name="viewport" content="initial-scale=1, user-scalable=no"-->
+<!--Widget List-->
+<!--rel="stylesheet" [routerLink]="../../vendors/bootstrap/dist/css/bootstrap.min.css"-->
+<!--rel="stylesheet" [routerLink]="../../css/style.css"/>-->
+<!--src="../../vendors/bootstrap/dist/js/bootstrap.min.js"-->
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand pull-left">
-      <a href="../page/page-list.html" class="navbar-link">
+      <a [routerLink]="['/user/:uid/website/:wid/page']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </div>
@@ -22,7 +22,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
       </a>
     </div>
     <p class="navbar-text pull-right">
-      <a class="navbar-link" href="widget-chooser.html">
+      <a class="navbar-link" [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']">
         <span class="glyphicon glyphicon-plus"></span>
       </a>
     </p>
@@ -32,7 +32,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 <div class="container-fluid jj-body">
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <a href="widget-heading.html">
+      <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']">
         <span class="glyphicon glyphicon-cog"></span>
       </a>
       <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -42,7 +42,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <a href="widget-heading.html">
+      <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']">
         <span class="glyphicon glyphicon-cog"></span>
       </a>
       <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -52,7 +52,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <a href="widget-image.html">
+      <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']">
         <span class="glyphicon glyphicon-cog"></span>
       </a>
       <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -77,7 +77,7 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
   </div>
   <div class="jj-widget">
     <div class="jj-toolbar">
-      <a href="widget-youtube.html">
+      <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']">
         <span class="glyphicon glyphicon-cog"></span>
       </a>
       <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -93,15 +93,15 @@ src="../../vendors/bootstrap/dist/js/bootstrap.min.js"
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="../../views/user/profile.html">
+      <a [routerLink]="['/user/:uid']">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
     <p class="navbar-text pull-left">
-      <a href="">
+      <a [routerLink]="">
         <span class="glyphicon glyphicon-play"></span>
       </a>
-      <a href="">
+      <a [routerLink]="">
         <span class="glyphicon glyphicon-eye-open"></span>
       </a>
   </div>
